--- a/content/chapter1.tex
+++ b/content/chapter1.tex
@@ -13,7 +13,7 @@ Table \ref{standardmodel} shows the different elementary particles the Standard 
 %\setlength{\tabcolsep}{3cm}
 \begin{tabular}{|c|c c c|c|} 
 \hline
- & $1^{st}$ generation & $^{2nd}$ generation & $3^{rd}$ generation &  Bosons \\
+ & $1^{st}$ generation & $2^{nd}$ generation & $3^{rd}$ generation &  Bosons \\
 \hline
 \hline
 &	&	&	& \small{Vector-bosons}	\\
@@ -68,8 +68,7 @@ These ideas are used for example in little Higgs and composite Higgs models.\\
 In addition to that, if the vector-like quarks will exist, they would offer the possibility to allow tree-level flavour-changing neutral currents and to break the GIM mechanism \cite{GIM}.
 Moreover, new origins of CP violation would arise from the existence of vector-like quarks \cite{CP1,CP2}.\\
 In the theories mentioned before, vector-like quarks  are predicted as fermions with spin $s = \frac{1}{2}$.
-There are four types of vector-like quarks which are assumed to couple predominantly to the third generation Standard Model quarks.
-Caused by the coupling between the vector-like quarks and the third generation quarks, the coupling of the Standard Model quarks to the vector bosons would change.\\
+There are four types of vector-like quarks which are assumed to couple predominantly to the third generation Standard Model quarks.\\
 The different vector-like quarks may appear in seven multiplets of which two are singulets, three doublets and two triplets.
 Table \ref{vectorlikequarks} lists the different vector-like quark flavors with their specific charge and the possible multiplets they can be assigned too.
 
@@ -97,16 +96,15 @@ Unlike the Standard Model quarks coupling with a (V-A), which means a vector min
 Therfore, also vector-like quarks with right-handed chirality couple to the weak force.
 Since the lagrangian describing the properties of the vector-like quarks is invariant under SU(2) transformations, explicit mass terms in the lagrangian are not forbidden because they do not break the local gauge invariance.
 Hence, the vector-like quarks do not receive their masses from the higgs mechanism in contrast to the Standard Model quarks.\\
-Because of the almost equal kinematic for the vector-like top and bottom quarks arranged in singulets, doublets and triplets the multiplets can be used similary for optimization studies.
-Therfore mostly only singulets are considered.\\
+Because of the almost equal kinematic for the vector-like top and bottom quarks arranged in singulets, doublets and triplets the multiplets can be used similary for optimization studies \cite{8tevanalysis}.
+Therfore mostly only singulets are considered .\\
 Possible decay channels for the vector-like quarks include a combination of the vector bosons $W^{\pm}$, $Z^{0}$ or the higgs and a third generation quarks so that conservation of charge is guaranteed.\\
-
 Vector-like quarks can be both pair and singly produced.
 The main process for the pair production is the gluon fusion via the strong interaction.
 The Feynman diagrams for the pair production process with the specific vector-like quark decay topology TT \texorpdfstring{$\longrightarrow$}~ZtWb and BB \texorpdfstring{$\longrightarrow$}~ZbWt are presented in figure \ref{feynmantts} for the vector-like top and \ref{feynmanbbs} for the vector-like bottom quark.
 \begin{figure}[h!]
 \centering
-\includegraphics[width=11cm]{figures/tts.pdf}
+\includegraphics[width=11cm]{figures/TTS.pdf}
 \caption{Feynman diagram for the vector-like top pair production process and the TT \texorpdfstring{$\longrightarrow$}~ZtWb decay channel.}
 \label{feynmantts}
 \end{figure}
@@ -115,7 +113,7 @@ The Feynman diagrams for the pair production process with the specific vector-li
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=11cm]{figures/bbs.pdf}
+\includegraphics[width=11cm]{figures/BBS.pdf}
 \caption{Feynman diagram for the vector-like bottom pair production process and the BB \texorpdfstring{$\longrightarrow$}~ZbWt decay channel.}
 \label{feynmanbbs}
 \end{figure}
