--- a/references.bib
+++ b/references.bib
@@ -253,6 +253,92 @@ author = "David B. Kaplan",
   abstract={The ATLAS detector as installed in its experimental cavern at point 1 at CERN is described in this paper. A brief overview of the expected performance of the detector when the Large Hadron Collider begins operation is also presented.}
 }
 
+@article{Sherpa,
+      author         = "Gleisberg, T. and Hoeche, Stefan. and Krauss, F. and
+                        Schonherr, M. and Schumann, S. and Siegert, F. and Winter,
+                        J.",
+      title          = "{Event generation with SHERPA 1.1}",
+      journal        = "JHEP",
+      volume         = "02",
+      year           = "2009",
+      pages          = "007",
+      doi            = "10.1088/1126-6708/2009/02/007",
+      eprint         = "0811.4622",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-08-477-T, SLAC-PUB-13420, ZU-TH-17-08,
+                        DCPT-08-138, IPPP-08-69, EDINBURGH-2008-30, MCNET-08-14",
+      SLACcitation   = "%%CITATION = ARXIV:0811.4622;%%"
+}
+
+@article{Pythia,
+      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+                        Z.",
+      title          = "{A Brief Introduction to PYTHIA 8.1}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "178",
+      year           = "2008",
+      pages          = "852-867",
+      doi            = "10.1016/j.cpc.2008.01.036",
+      eprint         = "0710.3820",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-LCGAPP-2007-04, LU-TP-07-28,
+                        FERMILAB-PUB-07-512-CD-T",
+      SLACcitation   = "%%CITATION = ARXIV:0710.3820;%%"
+}
+
+@article{Madgraph,
+      author         = "Alwall, J. and Frederix, R. and Frixione, S. and Hirschi,
+                        V. and Maltoni, F. and Mattelaer, O. and Shao, H. -S. and
+                        Stelzer, T. and Torrielli, P. and Zaro, M.",
+      title          = "{The automated computation of tree-level and
+                        next-to-leading order differential cross sections, and
+                        their matching to parton shower simulations}",
+      journal        = "JHEP",
+      volume         = "07",
+      year           = "2014",
+      pages          = "079",
+      doi            = "10.1007/JHEP07(2014)079",
+      eprint         = "1405.0301",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2014-064, CP3-14-18, LPN14-066, MCNET-14-09,
+                        ZU-TH-14-14",
+      SLACcitation   = "%%CITATION = ARXIV:1405.0301;%%"
+}
+
+@article{Powheg,
+      author         = "Oleari, Carlo",
+      title          = "{The POWHEG-BOX}",
+      booktitle      = "{Proceedings,  10th DESY Workshop on Elementary Particle
+                        Theory: Loops and Legs in Quantum Field Theory}",
+      journal        = "Nucl. Phys. Proc. Suppl.",
+      volume         = "205-206",
+      year           = "2010",
+      pages          = "36-41",
+      doi            = "10.1016/j.nuclphysbps.2010.08.016",
+      eprint         = "1007.3893",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1007.3893;%%"
+}
+
+@article{Protos,
+      author         = "Aguilar-Saavedra, J. A.",
+      title          = "{Identifying top partners at LHC}",
+      journal        = "JHEP",
+      volume         = "11",
+      year           = "2009",
+      pages          = "030",
+      doi            = "10.1088/1126-6708/2009/11/030",
+      eprint         = "0907.3155",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0907.3155;%%"
+}
+
+
 @article{antikt,
       author         = "Cacciari, Matteo and Salam, Gavin P. and Soyez, Gregory",
       title          = "{The anti-$k_t$ jet clustering algorithm}",
@@ -266,6 +352,15 @@ author = "David B. Kaplan",
       primaryClass   = "hep-ph",
       reportNumber   = "LPTHE-07-03",
       SLACcitation   = "%%CITATION = ARXIV:0802.1189;%%"
+}
+
+@techreport{toptag,
+      title         = "{Boosted hadronic top identification at ATLAS for early 13
+                       TeV data}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-PHYS-PUB-2015-053",
+      reportNumber  = "ATL-PHYS-PUB-2015-053",
 }
 
 
@@ -294,9 +389,13 @@ author = "David B. Kaplan",
   }
 
 % eine Internet Quelle
-
-
-
+@MANUAL{boosted,
+url = {http://www.quantumdiaries.org/author/emily-thompson/},
+author = {Thompson,Emily},
+date = {2016},
+month = {7},
+day = {4}
+}
 
 
 
