--- a/content/chapter4.tex
+++ b/content/chapter4.tex
@@ -244,7 +244,7 @@ For the signal processes there is a high amount of events without W-tagged large
 This could be caused by the argumentation mentioned before that the large-R jet pruduced by the W-boson is ignored because of the overlap removal.
 In addition to that the boson-tagger doesn't work perfectly but has an efficiency of 50 \%.\\
 After demanding all three parts of the basic selection implied by the boosted WbZt topology, a lot of background is rejected, which becomes obvious in the three discributions described before.
-The unweighted number of events, which means the real number of Monte-Carlo events, without any weights applied , and the weighted number of events (discussed in section \section{samples}) for signal and background after the basic selection is listed in table \ref{numberoevents}.
+The unweighted number of events, which means the real number of Monte-Carlo events, without any weights applied , and the weighted number of events (discussed in section \ref{samples}) for signal and background after the basic selection is listed in table \ref{numberoevents}.
 The listed numbers reveal that after the event preselection and basic selection there are for both signal and background very  low numbers of events.
 An optimization study without enough statistic is not convincing because the distributions subject to large statistical uncertainties.
 Therefore the optimization study in this analysis is performed without requiring at least one W-tag.
