--- a/references.bib
+++ b/references.bib
@@ -246,10 +246,9 @@ author = "David B. Kaplan",
   author={The ATLAS Collaboration},
   title={The ATLAS Experiment at the CERN Large Hadron Collider},
   journal={Journal of Instrumentation},
-  volume={3},
-  number={08},
   pages={S08003},
   year={2008},
+  doi = {10.1088/1748-0221/3/08/S08003},
   abstract={The ATLAS detector as installed in its experimental cavern at point 1 at CERN is described in this paper. A brief overview of the expected performance of the detector when the Large Hadron Collider begins operation is also presented.}
 }
 
@@ -361,6 +360,16 @@ author = "David B. Kaplan",
       address       = "Geneva",
       number        = "ATL-PHYS-PUB-2015-053",
       reportNumber  = "ATL-PHYS-PUB-2015-053",
+}
+
+@techreport{Wtag,
+      title         = "{Identification of boosted, hadronically-decaying $W$ and
+                       $Z$ bosons in $\sqrt{s} = 13$ TeV Monte Carlo Simulations
+                       for ATLAS}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-PHYS-PUB-2015-033",
+      reportNumber  = "ATL-PHYS-PUB-2015-033",
 }
 
 
